src/objects/ffr__DataViewAction__c.object
<CustomObject>
    <description>Stores details of an action that has been enabled on a dataview.</description>
    <fields>
        <fullName>ffr__ApexClass__c</fullName>
        <label>Apex Class</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__Dataview__c</fullName>
        <label>Dataview</label>
        <referenceTo>ffr__DataView__c</referenceTo>
        <relationshipLabel>Dataview Actions</relationshipLabel>
        <relationshipName>DataviewActions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffr__Description__c</fullName>
        <label>Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__Parameter__c</fullName>
        <label>Parameter</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Dataview Action</label>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dataview Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>